--- a/packages/scraper/tsconfig.json
+++ b/packages/scraper/tsconfig.json
@@ -1,8 +1,10 @@
 {
   "compilerOptions": {
-    "module": "CommonJS",
+    "module": "commonjs",
     "declaration": true,
     "removeComments": true,
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true,
     "allowSyntheticDefaultImports": true,
     "target": "ES2023",
     "sourceMap": true,
@@ -14,8 +16,6 @@
     "forceConsistentCasingInFileNames": true,
     "noImplicitAny": false,
     "strictBindCallApply": false,
-    "noFallthroughCasesInSwitch": false,
-    "esModuleInterop": true
-  },
-  "exclude": ["node_modules", "test", "dist", "**/*spec.ts"]
+    "noFallthroughCasesInSwitch": false
+  }
 }
