--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -25,10 +25,17 @@
     "@nestjs/core": "^11.0.1",
     "@nestjs/microservices": "^11.0.11",
     "@nestjs/platform-express": "^11.0.1",
+    "@nestjs/sequelize": "^11.0.0",
+    "@nestjs/serve-static": "^5.0.3",
     "amqp-connection-manager": "^4.1.14",
     "amqplib": "^0.10.5",
+    "class-validator": "^0.14.1",
+    "pg": "^8.13.3",
     "reflect-metadata": "^0.2.2",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "sequelize": "^6.37.6",
+    "sequelize-typescript": "^2.1.6",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
