--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -6,14 +6,20 @@ services:
       dockerfile: Dockerfile.dev
     volumes:
       - ./packages/backend:/app
-      - /app/node_modules
-      - files:/app/uploads
+      - ./packages/backend/node_modules:/app/node_modules
+      - files:$UPLOADS_MOUNT_DIR
     ports:
-      - "$BACKEND_PORT:3000"
+      - "$BACKEND_EX_PORT:3000"
     networks:
       - food-craver
     environment:
       - NODE_ENV=development
+      - UPLOADS_MOUNT_DIR=$UPLOADS_MOUNT_DIR
+      - DB_HOST=$DB_HOST
+      - DB_PORT=$DB_PORT
+      - DB_NAME=$DB_NAME
+      - DB_USER=$DB_USER
+      - DB_PASSWORD=$DB_PASSWORD
       - RABBITMQ_HOST=message-broker
       - RABBITMQ_PORT=$BROKER_AMQP_PORT
       - RABBITMQ_USER=$BROKER_USER
@@ -30,17 +36,19 @@ services:
     volumes:
       - ./packages/scraper:/app
       - /app/node_modules
+      - files:$UPLOADS_MOUNT_DIR
     networks:
       - food-craver
     environment:
       - NODE_ENV=development
+      - UPLOADS_MOUNT_DIR=$UPLOADS_MOUNT_DIR
       - RABBITMQ_HOST=message-broker
       - RABBITMQ_PORT=$BROKER_AMQP_PORT
       - RABBITMQ_USER=$BROKER_USER
       - RABBITMQ_PW=$BROKER_PASSWORD
       - RABBITMQ_QUEUE=backend.page.queue
-      - REDIS_HOST=cache
-      - REDIS_PORT=5432
+      - REDIS_HOST=$REDIS_HOST
+      - REDIS_PORT=$CACHE_PORT
     command: ["yarn", "start:dev"]
     restart: always
   
@@ -52,17 +60,19 @@ services:
     volumes:
       - ./packages/scraper:/app
       - /app/node_modules
+      - files:$UPLOADS_MOUNT_DIR
     networks:
       - food-craver
     environment:
       - NODE_ENV=development
+      - UPLOADS_MOUNT_DIR=$UPLOADS_MOUNT_DIR
       - RABBITMQ_HOST=message-broker
       - RABBITMQ_PORT=$BROKER_AMQP_PORT
       - RABBITMQ_USER=$BROKER_USER
       - RABBITMQ_PW=$BROKER_PASSWORD
       - RABBITMQ_QUEUE=scraper.page.queue
-      - REDIS_HOST=cache
-      - REDIS_PORT=5432
+      - REDIS_HOST=$REDIS_HOST
+      - REDIS_PORT=$CACHE_PORT
     command: ["yarn", "start:dev"]
     restart: always
 
@@ -74,8 +84,8 @@ services:
     volumes:
       - rabbitmq_data:/var/lib/rabbitmq
     ports:
-      - "$BROKER_AMQP_PORT:5672"
-      - "$BROKER_UI_PORT:15672"
+      - "$BROKER_AMQP_EX_PORT:$BROKER_AMQP_PORT"
+      - "$BROKER_UI_EX_PORT:$BROKER_UI_PORT"
     networks:
       - food-craver
     environment:
@@ -97,7 +107,7 @@ services:
       context: ./packages/database
       dockerfile: Dockerfile
     ports:
-      - "$DB_PORT:5432"
+      - "$DB_EX_PORT:$DB_PORT"
     networks:
       - food-craver
     volumes:
