--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,13 +4,25 @@ services:
     build: 
       context: ./packages/backend
       dockerfile: Dockerfile
-
     volumes:
-      - files:/app/uploads
+      - files:$UPLOADS_MOUNT_DIR
     ports:
-      - "$BACKEND_PORT:3000"
+      - "$BACKEND_EX_PORT:3000"
     networks:
       - food-craver
+    environment:
+      - NODE_ENV=production
+      - UPLOADS_MOUNT_DIR=$UPLOADS_MOUNT_DIR
+      - DB_HOST=$DB_HOST
+      - DB_PORT=$DB_PORT
+      - DB_NAME=$DB_NAME
+      - DB_USER=$DB_USER
+      - DB_PASSWORD=$DB_PASSWORD
+      - RABBITMQ_HOST=message-broker
+      - RABBITMQ_PORT=$BROKER_AMQP_PORT
+      - RABBITMQ_USER=$BROKER_USER
+      - RABBITMQ_PW=$BROKER_PASSWORD
+      - RABBITMQ_QUEUE=backend.page.queue
     deploy:
       replicas: 1
       restart_policy:
@@ -28,6 +40,16 @@ services:
       dockerfile: Dockerfile
     networks:
       - food-craver
+    environment:
+      - NODE_ENV=production
+      - UPLOADS_MOUNT_DIR=$UPLOADS_MOUNT_DIR
+      - RABBITMQ_HOST=message-broker
+      - RABBITMQ_PORT=$BROKER_AMQP_PORT
+      - RABBITMQ_USER=$BROKER_USER
+      - RABBITMQ_PW=$BROKER_PASSWORD
+      - RABBITMQ_QUEUE=backend.page.queue
+      - REDIS_HOST=$REDIS_HOST
+      - REDIS_PORT=$CACHE_PORT
     deploy:
       replicas: 1
       restart_policy:
@@ -45,6 +67,16 @@ services:
       dockerfile: Dockerfile
     networks:
       - food-craver
+    environment:
+      - NODE_ENV=production
+      - UPLOADS_MOUNT_DIR=$UPLOADS_MOUNT_DIR
+      - RABBITMQ_HOST=message-broker
+      - RABBITMQ_PORT=$BROKER_AMQP_PORT
+      - RABBITMQ_USER=$BROKER_USER
+      - RABBITMQ_PW=$BROKER_PASSWORD
+      - RABBITMQ_QUEUE=scraper.page.queue
+      - REDIS_HOST=$REDIS_HOST
+      - REDIS_PORT=$CACHE_PORT
     deploy:
       replicas: 1
       restart_policy:
@@ -63,8 +95,8 @@ services:
     volumes:
       - rabbitmq_data:/var/lib/rabbitmq
     ports:
-      - "$BROKER_AMQP_PORT:5672"
-      - "$BROKER_UI_PORT:15672"
+      - "$BROKER_AMQP_EX_PORT:$BROKER_AMQP_PORT"
+      - "$BROKER_UI_EX_PORT:$BROKER_UI_PORT"
     networks:
       - food-craver
     environment:
@@ -86,7 +118,7 @@ services:
       context: ./packages/database
       dockerfile: Dockerfile
     ports:
-      - "$DB_PORT:5432"
+      - "$DB_EX_PORT:$DB_PORT"
     networks:
       - food-craver
     volumes:
@@ -104,7 +136,7 @@ services:
       options:
         max-size: "10m"
         max-file: "10"
-      
+  
   cache:
     image: $CACHE_IMAGE
     build: 
@@ -121,7 +153,6 @@ services:
       options:
         max-size: "10m"
         max-file: "10"
-
 
 networks:
   food-craver:
