--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -27,9 +27,12 @@
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/sequelize": "^11.0.0",
     "@nestjs/serve-static": "^5.0.3",
+    "@nestjs/swagger": "^11.0.6",
     "amqp-connection-manager": "^4.1.14",
     "amqplib": "^0.10.5",
     "class-validator": "^0.14.1",
+    "helmet": "^8.0.0",
+    "morgan": "^1.10.0",
     "pg": "^8.13.3",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
@@ -47,6 +50,7 @@
     "@swc/core": "^1.10.7",
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.14",
+    "@types/morgan": "^1.9.9",
     "@types/node": "^22.10.7",
     "@types/supertest": "^6.0.2",
     "eslint": "^9.18.0",
